tests/lean/empty.lean.expected.out
empty.lean:6:39: error: failed to synthesize placeholder

⊢ nonempty Empty
